--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -13,6 +13,7 @@
     <script src="/socket.io-client/socket.io.js"></script>
     <script src="/js-data/dist/js-data.js"></script>
     <script src="/js-data-angular/dist/js-data-angular.js"></script>
+    <script src="/angular-ui-sortable/src/sortable.js"></script>
     <script src="/main.js"></script>
 </head>
 <body ng-app="FullstackGeneratedApp">
