--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -11,6 +11,8 @@
     <script src="/angular/angular.js"></script>
     <script src="/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="/angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="/craftyjs/src/crafty.js"></script>
+
     <script src="/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="/socket.io-client/socket.io.js"></script>
     <script src="/js-data/dist/js-data.js"></script>
