--- a/browser/scss/directives/gameboard.scss
+++ b/browser/scss/directives/gameboard.scss
@@ -1,12 +1,9 @@
-@mixin size($width, $height: $width) {
-  width: $width;
-  height: $height;
-}
 
 .square{
 	border:1px solid black;
-	display:inline-block;
-	@include size(10vw);
+	float:left;
+	height:100%;
+	width:100%;
 }
 
 
