--- a/browser/scss/page/main.scss
+++ b/browser/scss/page/main.scss
@@ -1,56 +1,12 @@
 
 
 
+#canvas{
+  width: auto;  
+}
 
 #cr-stage{
-    background: url(images/stage-bg.png);
+    background: url(images/flower-field.png);
+    background-size: cover;
 
-}
-
-.section {
-  margin-bottom: 10px;
-}
-
-.indent {
-  margin-left: 15px;
-}
-
-.clickable {
-  cursor: pointer;
-}
-
-.boxed {
-  background: #ddd;
-  padding: 18px; 
-  box-shadow: 1px 3px 8px #000;
-  border: 2px solid #aaa;
-  border-radius: 8px;
-}
-
-
-table {
-  border-collapse: collapse;
-}
-td {
-  padding: 4px;
-}
-
-.level {
-  cursor: pointer;
-  width: 24px;
-  height: 24px;
-  line-height: 24px;
-  font-weight: bold;
-  float: left;
-  margin-right: 10px;
-  border: 1px solid #fff;
-  text-align: center;
-}
-.level:hover {
-  background: #444; 
-}
-.level.completed {
-  background: #553;
-  color: #ffa;
-  border-color: #aa6; 
 }
