--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -8,6 +8,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://cdn.jsdelivr.net/g/jquery@1,jquery.ui@1.10%28jquery.ui.core.min.js+jquery.ui.widget.min.js+jquery.ui.mouse.min.js+jquery.ui.sortable.min.js%29"></script>
     <script src="/lodash/index.js"></script>
+
+    <script type="text/javascript">
+        var becks = {
+            log: function(argsArr){
+                console.log(argsArr);
+            }
+        }
+    </script>
+
     <script src="//cdn.jsdelivr.net/bluebird/2.9.3/bluebird.js"></script>
     <script src="/angular/angular.js"></script>
     <script src="/angular-ui-router/release/angular-ui-router.js"></script>
