--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -10,11 +10,11 @@
     <script src="/lodash/index.js"></script>
 
     <script type="text/javascript">
-        var becks = {
-            log: function(argsArr){
-                console.log(argsArr);
-            }
-        }
+//        var becks = {
+//            log: function(argsArr){
+//                console.log(argsArr);
+//            }
+//        }
     </script>
 
     <script src="//cdn.jsdelivr.net/bluebird/2.9.3/bluebird.js"></script>
