--- a/browser/scss/book/main.scss
+++ b/browser/scss/book/main.scss
@@ -326,3 +326,37 @@
 //  margin-top: 7px;
 //  margin-left:18px;
 //}
+.dropzone {
+  position: relative;
+  padding: 14px;
+  border: 2px dashed grey;
+  margin-bottom: 14px;
+  border-radius: 5px;
+  font-size: 60px;
+  height: 100px;
+  color: grey;
+  text-align: center;
+}
+
+.dropzone:after {
+  content: 'drop zone';
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
+
+.noFields {
+  padding: 14px;
+  border: 2px dashed grey;
+}
+
+ul {
+  cursor: move;
+}
+
+li {
+  border: 1px dashed grey;
+  padding: 14px;
+}
