--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -29,6 +29,7 @@
     <script src="/angular-ui-sortable/src/sortable.js"></script>
     <script src="/js/turnjs/lib/turn.js"></script>
     <script src="angular-animate/angular-animate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
     <script src="/main.js"></script>
 </head>
 <body ng-app="FullstackGeneratedApp">
