added font to tools

--- a/browser/scss/book/main.scss
+++ b/browser/scss/book/main.scss
@@ -356,9 +356,9 @@ ul {
   cursor: move;
 }
 
-li {
-  border: 1px dashed grey;
-}
+//li {
+//  border: 1px dashed grey;
+//}
 
 .beingDragged {
   height: 24px;
