added progress bars for average mastery and a bar chart for age distribution

--- a/browser/scss/admin/main.scss
+++ b/browser/scss/admin/main.scss
@@ -11,3 +11,14 @@
 	border:0;
 	-webkit-box-shadow:none;
 }
+
+
+.axis{
+	font-size:small;
+}
+.axis path,
+	.axis line {
+	  fill: none;
+	  stroke: #000;
+	  shape-rendering: crispEdges;
+	}
