--- a/browser/scss/directives/toolbox.scss
+++ b/browser/scss/directives/toolbox.scss
@@ -1,3 +1,7 @@
+$purple: #8843b9;
+$turqoise: #18b8c2;
+$green: #b8f166;
+
 tool-box, spell{
 	li{
 		list-style-type: none;
@@ -9,24 +13,73 @@ tool-box, spell{
 		margin: 0;
 	}
 
+
 	.tool, .direction, .variable{
 		padding:1vh;
-		display:inline-block;
 		border-radius:5px;
 		border:2px solid white;
 		font-family:$font-title;
+	}
 
+	.glyphicon-remove{
+		cursor:pointer;
+	}
+
+	.first {
+		cursor:copy;
+		text-align:center;
 	}
 
 	.tool{
-		background-color: #18b8c2;
+		background-color: $turqoise;
+	}
+
+	.inline{
+
+		display:inline-block !important;
+
+		&.move{
+			input:disabled{
+
+				background-color:$purple !important;
+				font-family: $font-default;
+				text-align:center;
+				margin-bottom:0;
+			}
+
+		}
+
+		&.pickUp, &.ifStatement, &.whileLoop{
+				background-color:$green !important;
+				font-family: $font-default;
+				text-align:center;
+			
+
+		}
 	}
 
 	.direction{
-		background-color: #8843b9;
+		background-color: $purple;
 	}
 
 	.variable{
-		background-color: #b8f166;
+		background-color: $green;
+	}
+
+	.panel-heading.tool{
+		margin:0;
+		border:none;
+		border-radius:1px;
+	}
+
+	.panel.tool{
+		background-color: transparent;
+		border:2px solid $turqoise;
+		padding: 0;
+	}
+
+	.panel-body{
+				font-family: $font-default;
+
 	}
 }
