cleaned up the dropables

--- a/browser/scss/directives/toolbox.scss
+++ b/browser/scss/directives/toolbox.scss
@@ -64,6 +64,7 @@ tool-box, spell, add-variable{
 		input{
 			font-family: $font-default;
 			text-align:center;
+			width: 25% !important;
 
 		}
 	}
