fixed error sass

--- a/browser/scss/book/main.scss
+++ b/browser/scss/book/main.scss
@@ -357,7 +357,7 @@ ul {
 }
 
 //li {
-//  border: 1px dashed grey;
+//  border: 1px dashed grey;gulp
 //}
 
 .beingDragged {
@@ -376,12 +376,12 @@ ul {
  }
 
 .hover {
-  z-index:2;
-  cursor:none;
-  background-color:white;
+  z-index: 2;
+  cursor: none;
+  background-color: white;
   -webkit-transform: scale3d(1.1, 1.1, 1) translate3d(0, -5px, 0);
   -moz-transform: scale3d(1.1, 1.1, 1) translate3d(0, -5px, 0);
   -ms-transform: scale3d(1.1, 1.1, 1) translate3d(0, -5px, 0);
   -o-transform: scale3d(1.1, 1.1, 1) translate3d(0, -5px, 0);
   transform: scale3d(1.1, 1.1, 1) translate3d(0, -5px, 0);
-
+}
