--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -35,5 +35,6 @@
 <body ng-app="FullstackGeneratedApp">
     <navbar></navbar>
     <div id="main" ui-view="main"></div>
+    <footer></footer>
 </body>
 </html>
