fixed materialize bug- full page shows up

--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -12,6 +12,10 @@ body {
   font-family: $font-default;
 }
 
+body, html {
+  background: none !important;
+}
+
 @mixin clearfix {
   &:after {
     content: "";
