--- a/browser/scss/about/main.scss
+++ b/browser/scss/about/main.scss
@@ -3,36 +3,14 @@
   margin: 0 auto;
   width: 90%;
   @include clearfix;
+  font-size:medium;
 
-  p {
-    width: 40%;
-    margin: 0 auto;
-    text-align: justify;
-    font-size: 22px;
-    font-weight: 300;
-    float: left;
+  h2{
+    font-family:$font-title;
   }
 
-  .carousel {
-    float: right;
-    width: 55%;
-    overflow: hidden;
-    margin: 0 auto;
-    .carousel-inner {
-      height: 500px !important;
-    }
-    .carousel-control {
-      background: none;
-    }
-    .carousel-indicators {
-      display: none;
-    }
-    img {
-      max-width: 100%;
-      max-height: 500px;
-      display: block;
-      margin: 0 auto;
-    }
+  img{
+    width:100%;
+    border-radius:2px;
   }
-
 }
