reformatted spell, added dotted line

--- a/browser/scss/directives/toolbox.scss
+++ b/browser/scss/directives/toolbox.scss
@@ -115,4 +115,10 @@ tool-box, spell, add-variable{
 
 	}
 
+	.dropspell{
+		min-height: 30vh;
+		border: 1px dashed $turqoise;
+		border-radius:5px;
+	}
+
 }
