changed name again

--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <base href="/" />
-    <title>Codiblocks</title>
+    <title>SpellBook</title>
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="angular-material/angular-material.min.css">
     <link rel="stylesheet" type="text/css" href="/style.css" />
