--- a/browser/scss/directives/toolbox.scss
+++ b/browser/scss/directives/toolbox.scss
@@ -61,6 +61,7 @@ tool-box, spell, add-variable{
 		&.move{
 
 				background-color:$purple !important;
+				color:white;
 				font-family: $font-default;
 				text-align:center;
 				margin-bottom:0;
