--- a/browser/scss/directives/toolbox.scss
+++ b/browser/scss/directives/toolbox.scss
@@ -2,7 +2,7 @@ $purple: #8843b9;
 $turqoise: #18b8c2;
 $green: #b8f166;
 
-tool-box, spell, add-variable, next-tool-box{
+tool-box, spell, add-variable, next-tool-box, new-spell{
 
 	.panel{
 		background-color:transparent;
