--- a/browser/scss/book/main.scss
+++ b/browser/scss/book/main.scss
@@ -51,17 +51,62 @@ ul {
 }
 
 story-list-item {
-  padding: 10px;
+  padding: 1%;
 }
+
+.shelf{
+  height:10px;
+  width:90%;
+  background-color:$brown;
+  border-bottom:10px solid $brown;
+  position:absolute;
+  bottom:0;
+  left:2px;
+  z-index:1;
+}
+.shelf-top{
+  width: 90%;
+  height: 30px;
+  background-color:$brown;
+  transform: skewX(-40deg);
+  opacity:0.9;
+  position:absolute;
+  bottom:9px;
+}
+
+.shelf-whole{
+  transform:translateX(-5%) translateY(-5%);
+  position:relative;
+  height:10px;
+}
+
+.description{
+  position:absolute;
+  width:100%;
+  height:100%;
+  padding:2%;
+  background:rgba(255,255,255,0.6);
+}
+
 
 .storyItem {
   box-shadow: 2px 2px 5px rgba(0,0,0,0.6);
-  margin-right: 5px;
+  padding:0;
   height:30vh;
   overflow:hidden;
+  z-index:2;
+  margin-bottom:15px;
+
   .cover-image{
     width:100%;
     height:auto;
+  }
+
+  &:hover {
+    z-index: 2;
+    cursor: none;
+    background-color: white;
+    transform: scale3d(1.02, 1.02, 1.02) translate3d(0, -1px, 0);
   }
 }
 @charset "UTF-8";
