sprite add form working

--- a/browser/scss/level-editor/main.scss
+++ b/browser/scss/level-editor/main.scss
@@ -5,13 +5,21 @@
 	h4{
 		font-family: $font-title !important;
 		margin-bottom: 0px;
-	}
-	.select-var-type {
-		padding: 0px;
-		margin: 0px;
-		width: 50%;
+		margin-top: 2px;
+		display: inline !important;
 	}
 	
+}
+.select-var-type {
+	padding: 0px;
+	margin: 0px;
+	width: 50%;
+}
+.sprite-props
+{
+	padding: 0px;
+	margin: 0px;
+	// width: 50%;
 }
 
 .btn.tool{
@@ -28,6 +36,13 @@
 }
 
 .sprite-carousel{
-	height: 30%;
-	width: 20%;
+
+	h4{
+		font-family: $font-title !important;
+		margin-bottom: 0px;
+		margin-top: 2px;
+		display: inline !important;
+	}
+	height: 100%;
+	width: 100%;
 }
