--- a/browser/scss/level-editor/main.scss
+++ b/browser/scss/level-editor/main.scss
@@ -15,12 +15,11 @@
 	margin: 0px;
 	width: 50%;
 }
-.sprite-props
-{
-	padding: 0px;
-	margin: 0px;
-	// width: 50%;
-}
+// .sprite-props
+// {
+// 	padding: 0px;
+// 	margin: 0px;
+// }
 
 .btn.tool{
 	background: $turqoise;
