added a glossary, made create a book admin only

--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -41,5 +41,6 @@ body, html {
 @import 'book/main';
 @import 'admin/main';
 @import 'level-editor/main';
-@import 'addStory/main'
+@import 'addStory/main';
+@import 'glossary/main';
 
