--- a/browser/scss/directives/toolbox.scss
+++ b/browser/scss/directives/toolbox.scss
@@ -2,7 +2,7 @@ $purple: #8843b9;
 $turqoise: #18b8c2;
 $green: #b8f166;
 
-tool-box, spell, add-variable, next-tool-box, new-spell{
+tool-box, spell, add-variable, next-tool-box, new-spell, .glossary{
 
 	.panel{
 		background-color:transparent;
@@ -58,7 +58,7 @@ tool-box, spell, add-variable, next-tool-box, new-spell{
 		display:inline-block !important;
 		width:auto !important;
 
-		&.move{
+		&.move, &.moveRandom{
 
 				background-color:$purple !important;
 				color:white;
