changed formatting on story list items

--- a/browser/scss/book/main.scss
+++ b/browser/scss/book/main.scss
@@ -96,6 +96,7 @@ story-list-item {
 .storyItem {
   box-shadow: 2px 2px 5px rgba(0,0,0,0.6);
   padding:0;
+  background: white;
   height:30vh;
   overflow:hidden;
   z-index:2;
