--- a/browser/scss/level-editor/main.scss
+++ b/browser/scss/level-editor/main.scss
@@ -45,3 +45,11 @@
 	height: 100%;
 	width: 100%;
 }
+
+.create-btn{
+  background-color: $purple;
+  color:white;
+
+  font-family: $font-title;
+  margin-top:3%;
+}
