--- a/browser/scss/directives/win-modal.scss
+++ b/browser/scss/directives/win-modal.scss
@@ -1,7 +1,13 @@
 
 #levelwin{
+	top:30%;
+	border-radius:5px;
 	background-color:white;
 	padding:1%;
 	font-family:$font-title;
 
+}
+
+.modal{
+	top:30%;
 }
