--- a/browser/scss/level-editor/main.scss
+++ b/browser/scss/level-editor/main.scss
@@ -21,8 +21,15 @@
 }
 
 .title-font {
+	
 	font-family: $font-title !important;
+
 }
+
+h2.title-font{
+	color: $purple !important;
+}
+
 .select-var-type{
 	padding: 0px;
 	margin: 0px;
@@ -34,7 +41,8 @@
 
 .btn.variable{
 	background: $green;
-	display: inline-block;
+	display: block;
+	margin: 2% 0 0 0;
 }
 
 .btn.md-primary {
