minor changes: homepage clickable, glossary formatting fix, gender chart has *preferred not to say

--- a/browser/scss/glossary/main.scss
+++ b/browser/scss/glossary/main.scss
@@ -11,15 +11,14 @@
 	}
 
 	.tool-drop{
-		border: 2px solid $turqoise;
-		border-radius:6px;
-		padding:0px;
-		.panel.tool{
-			margin:0px;
-		}
+
 		.spellTool{
 			border-bottom-left-radius: 0px;
 			border-bottom-right-radius:0px;
+		}
+		.panel-body.components{
+			border: 2px solid $turqoise;
+			border-radius:0px 0px 6px 6px;
 		}
 	}
 }
