teacher users and set loss reqs

--- a/browser/scss/level-editor/main.scss
+++ b/browser/scss/level-editor/main.scss
@@ -47,6 +47,12 @@
 		color:white;
 	}
 
+	.req-obj{
+		border-radius: 5px;
+		padding: 2%;
+		font-family: $font-title;
+	}
+
 	p{
 		font-family:$font-default;
 	}
