fixed windows 7 chrome/ probably actually https  error by changing jquery cdn to https

--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="angular-material/angular-material.min.css">
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="http://cdn.jsdelivr.net/g/jquery@1,jquery.ui@1.10%28jquery.ui.core.min.js+jquery.ui.widget.min.js+jquery.ui.mouse.min.js+jquery.ui.sortable.min.js%29"></script>
+    <script src="https://cdn.jsdelivr.net/g/jquery@1,jquery.ui@1.10%28jquery.ui.core.min.js+jquery.ui.widget.min.js+jquery.ui.mouse.min.js+jquery.ui.sortable.min.js%29"></script>
     <script src="/lodash/index.js"></script>
 
     <script type="text/javascript">
