teachers can see their classes

--- a/browser/scss/directives/toolbox.scss
+++ b/browser/scss/directives/toolbox.scss
@@ -127,3 +127,9 @@ tool-box, spell, add-variable, next-tool-box, new-spell, .glossary{
 	}
 
 }
+
+.inline{
+
+	display:inline-block !important;
+	width:auto !important;
+}
