--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -35,6 +35,20 @@
 
 
     <script src="/main.js"></script>
+    
+</head>
+<body ng-app="FullstackGeneratedApp">
+    <!-- Google Tag Manager -->
+    <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-5GZ5Q7"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-5GZ5Q7');</script>
+    <!-- End Google Tag Manager -->
+    <navbar></navbar>
+    <div id="main" ui-view="main"></div>
     <script>
         //google analytics
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -46,10 +60,6 @@
         ga('send', 'pageview');
 
 </script>
-</head>
-<body ng-app="FullstackGeneratedApp">
-    <navbar></navbar>
-    <div id="main" ui-view="main"></div>
     <footer></footer>
 </body>
 </html>
