working on adding data layer vars for google analytics

--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -19,13 +19,12 @@
     </script>
 
     <script src="//cdn.jsdelivr.net/bluebird/2.9.3/bluebird.js"></script>
-    <script src="/angular/angular.js"></script>
-    <script src="/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="/angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="/angular/angular.min.js"></script>
+    <script src="/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="https://rawgithub.com/craftyjs/Crafty/release/dist/crafty-min.js"></script>
-    <script src="/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="/socket.io-client/socket.io.js"></script>
-    <script src="/js-data/dist/js-data.js"></script>
+    <script src="/angular-ui-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="/js-data/dist/js-data.min.js"></script>
     <script src="/js-data-angular/dist/js-data-angular.js"></script>
     <script src="/angular-ui-sortable/src/sortable.js"></script>
     <script src="angular-animate/angular-animate.min.js"></script>
@@ -36,6 +35,13 @@
     
 </head>
 <body ng-app="FullstackGeneratedApp">
+    <script>
+        // google analytics data layer variables
+        dataLayer = [{
+            // 'pageCategory': 'signup',
+            // 'visitorType': 'high-value'
+        }];
+    </script>
     <!-- Google Tag Manager -->
     <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-5GZ5Q7"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
