--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -3,7 +3,7 @@
 <head>
     <base href="/" />
     <title>SpellBook</title>
-    <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="angular-material/angular-material.min.css">
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -18,18 +18,18 @@
        }
     </script>
 
-    <script src="//cdn.jsdelivr.net/bluebird/2.9.3/bluebird.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.0.6/bluebird.min.js"></script>
     <script src="/angular/angular.min.js"></script>
     <script src="/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="https://rawgithub.com/craftyjs/Crafty/release/dist/crafty-min.js"></script>
     <script src="/angular-ui-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="/js-data/dist/js-data.min.js"></script>
-    <script src="/js-data-angular/dist/js-data-angular.js"></script>
-    <script src="/angular-ui-sortable/src/sortable.js"></script>
+    <script src="/js-data-angular/dist/js-data-angular.min.js"></script>
+    <script src="/angular-ui-sortable/src/sortable.min.js"></script>
     <script src="angular-animate/angular-animate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
-    <script src="/angular-aria/angular-aria.js"></script>
+    <script src="/angular-aria/angular-aria.min.js"></script>
     <script src="/angular-material/angular-material.min.js"></script>
     <script src="/main.js"></script>
     
