working on responsive front page

--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -24,5 +24,15 @@
     outline:none;
 
   }
+
+  #logo{
+    background-size:contain;
+    background-repeat: no-repeat;
+    background-position:center;
+    
+    height:80vh;
+    text-align:center;
+    outline:none;
+  }
 }
 
