--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -4,7 +4,7 @@
     <base href="/" />
     <title>SpellBook</title>
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="angular-material/angular-material.css">
+    <link rel="stylesheet" href="angular-material/angular-material.min.css">
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/g/jquery@1,jquery.ui@1.10%28jquery.ui.core.min.js+jquery.ui.widget.min.js+jquery.ui.mouse.min.js+jquery.ui.sortable.min.js%29"></script>
@@ -19,17 +19,17 @@
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.0.6/bluebird.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.js"></script>
-    <script src="/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+    <script src="/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="https://rawgithub.com/craftyjs/Crafty/release/dist/crafty-min.js"></script>
     <script src="/angular-ui-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="/js-data/dist/js-data.min.js"></script>
-    <script src="/js-data-angular/dist/js-data-angular.js"></script>
+    <script src="/js-data-angular/dist/js-data-angular.min.js"></script>
     <script src="/angular-ui-sortable/dist/sortable.min.js"></script>
-    <script src="angular-animate/angular-animate.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-animate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
-    <script src="/angular-aria/angular-aria.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-aria.min.js"></script>
     <script src="/angular-material/angular-material.min.js"></script>
     <script src="/main.js"></script>
     
